RESOLVED FIXED186758
Correctly close the variable argument list
https://bugs.webkit.org/show_bug.cgi?id=186758
Summary Correctly close the variable argument list
Tomas Popela
Reported 2018-06-18 04:18:03 PDT
Found by Coverity scan: 1. webkitgtk-2.20.3/Source/WTF/wtf/text/WTFString.cpp:454: va_init: Initializing va_list "argsCopy". 3. webkitgtk-2.20.3/Source/WTF/wtf/text/WTFString.cpp:480: missing_va_end: va_end was not called for "argsCopy". # 478| # 479| if (result == 0) # 480|-> return emptyString(); # 481| if (result < 0) # 482| return String();
Attachments
Patch (1.77 KB, patch)
2018-06-18 04:20 PDT, Tomas Popela
no flags
Archive of layout-test-results from ews200 for win-future (12.90 MB, application/zip)
2018-06-18 15:52 PDT, EWS Watchlist
no flags
Patch (1.96 KB, patch)
2018-07-24 04:23 PDT, Tomas Popela
no flags
Archive of layout-test-results from ews200 for win-future (12.89 MB, application/zip)
2018-07-24 11:30 PDT, EWS Watchlist
no flags
Tomas Popela
Comment 1 2018-06-18 04:20:28 PDT
EWS Watchlist
Comment 2 2018-06-18 04:23:45 PDT
Attachment 342925 [details] did not pass style-queue: ERROR: Source/WTF/wtf/text/WTFString.cpp:480: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 3 2018-06-18 15:52:33 PDT
Comment on attachment 342925 [details] Patch Attachment 342925 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/8236949 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-audio.html
EWS Watchlist
Comment 4 2018-06-18 15:52:44 PDT
Created attachment 342984 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Michael Catanzaro
Comment 6 2018-06-30 14:30:02 PDT
Comment on attachment 342925 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342925&action=review > Source/WTF/wtf/text/WTFString.cpp:466 > va_end(args); > + va_end(argsCopy); Good catch, Fujii. Surely this function should call va_end(argsCopy), as Coverity suggests, but it should NOT call va_end(args). > Source/WTF/wtf/text/WTFString.cpp:478 > va_end(args); This should be removed, as well.
Tomas Popela
Comment 7 2018-07-24 04:21:14 PDT
(In reply to Fujii Hironori from comment #5) > Why does createWithFormatAndArguments invoke va_end(args)? Good catch Fujii! Also String::formatWithArguments() is not used at all. I will open a bug for removing it.
Tomas Popela
Comment 8 2018-07-24 04:23:38 PDT
EWS Watchlist
Comment 9 2018-07-24 11:30:12 PDT
Comment on attachment 345657 [details] Patch Attachment 345657 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8639639 New failing tests: http/tests/security/canvas-remote-read-remote-video-localhost.html
EWS Watchlist
Comment 10 2018-07-24 11:30:23 PDT
Created attachment 345695 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Tomas Popela
Comment 11 2018-07-25 00:11:42 PDT
Comment on attachment 345657 [details] Patch Clearing flags on attachment: 345657 Committed r234192: <https://trac.webkit.org/changeset/234192>
Tomas Popela
Comment 12 2018-07-25 00:11:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2018-07-25 00:14:04 PDT
Note You need to log in before you can comment on or make changes to this bug.