Correctly close the variable argument list https://bugs.webkit.org/show_bug.cgi?id=186758

Reviewed by Michael Catanzaro.

The argcCopy is not ended when we early return. Also don't call
va_end() on args because it's closed in caller.

* wtf/text/WTFString.cpp:
(WTF::createWithFormatAndArguments):

Canonical link: https://commits.webkit.org/203165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234192 268f45cc-cd09-0410-ab3c-d52691b4dbfc